<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@android:drawable/ic_menu_view" />
    <item android:id="@+id/nav_study_partner"
        android:title="@string/find_study_partner"
        android:icon="@android:drawable/ic_menu_search" />
    <item android:id="@+id/nav_forums"
        android:title="@string/discussion_forums"
        android:icon="@android:drawable/ic_menu_info_details" />
    <item android:id="@+id/nav_resources"
        android:title="@string/resource_sharing"
        android:icon="@android:drawable/ic_menu_save" />
    <item android:id="@+id/nav_logout"
        android:title="@string/logout"
        android:icon="@android:drawable/ic_menu_close_clear_cancel" />
</menu>
